[package]
name = "mh_wilds_hook"
version = "0.1.0"
edition = "2024"

[lib]
name = "dinput8"
crate-type = ["cdylib"]

[dependencies]
imgui = "0.12.0"
lazy_static = "1.5.0"
log = "0.4.29"
retour = "0.3.1"
simplelog = "0.12.2"
windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_System_SystemServices", "Win32_System_LibraryLoader", "Win32_System_Console", "Win32_Graphics_Direct3D12", "Win32_Graphics_Direct3D", "Win32_Graphics_Dxgi", "Win32_Graphics_Dxgi_Common", "Win32_UI_WindowsAndMessaging", "Win32_UI_Input", "Win32_Graphics_Direct3D_Fxc", "Win32_UI_Input_KeyboardAndMouse", "Win32_Graphics_Gdi"] }
